# furink

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  compose.common.yaml  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/frontend/: .eslintrc.json  package.json  tailwind.config.ts
apps/frontend/src/app/: layout.tsx  page.tsx  providers.tsx
apps/frontend/src/components/: footer.tsx  header.tsx
apps/frontend/src/server/: README.md  api.ts
config/: gorse.dev.toml  traefik-dynamic.yml
docker/postgres-ssl-bootstrap/: Dockerfile  run.sh
docker/postgres/docker-entrypoint-initdb.d/: create-databases.sh
env/: auth-db.env.default  auth.env.default  backend-db.env.default  backend.env.default  common.env.default  gorse.env.default  minio.env.default  mongo.env.default  postgres.env.default  typesense.env.default
services/backend/: Dockerfile  Dockerfile.postgres-ssl-bootstrap  README.md  package.json  tsconfig.json
services/backend/prisma/: schema.prisma
services/backend/scripts/: setup-postgres-ssl.sh  setup-postgresql.sh
services/backend/scripts/postgres-docker-entrypoint-initdb/: init.sh
services/backend/src/: app.module.ts  main.ts
services/backend/src/common/: common.module.ts
services/backend/src/config/: config.interface.ts  index.ts  loadConfiguration.ts
services/detector/: Cargo.toml
services/detector/src/: main.rs
tools/e621-extract/: Cargo.toml
tools/e621-extract/src/: main.rs
tools/e6ai-extract/: Cargo.toml
(+37 files in other folders)
